Fixed modal layout issues

--- a/src/styles/bootstrap/modals.less
+++ b/src/styles/bootstrap/modals.less
@@ -3,6 +3,7 @@
 // --------------------------------------------------
 // Modified for Brackets:
 //  -changed modal-backdrop opacity to 50
+//  -changed modal position and margin
 
 // Background
 .modal-backdrop {
@@ -25,11 +26,11 @@
 // Base modal
 .modal {
   position: fixed;
-  top: 10%;
+  top: 50%;//changed from 10%
   left: 50%;
   z-index: @zindexModal;
-  width: 560px;
-  margin-left: -280px;
+  width: 600px;
+  margin: -250px 0 0 -280px;//changed from -280px
   background-color: @white;
   border: 1px solid #999;
   border: 1px solid rgba(0,0,0,.3);
@@ -44,7 +45,7 @@
     .transition(e('opacity .3s linear, top .3s ease-out'));
     top: -25%;
   }
-  &.fade.in { top: 10%; }
+  &.fade.in { top: 50%; }
 }
 .modal-header {
   padding: 9px 15px;
